Fix VectorTests in runtime